css/portfolio.css
*{
    box-sizing: border-box;
}
html {
	margin: 0; 
	padding: 0;
}
body { 
    margin: 0; 
	padding: 0;
    padding-bottom: 70px; 
}
.navbar {
    margin-bottom: 0;
    min-height: 70px;
}
#top {
	background: #191A19;
	color: white;
    text-align: center;
    margin-bottom: 0;
}
#top p {
	color: white;
    font-size: 26px;
    line-height: 26px;
}
.btn-primary {
	color: #fff;
	background-color: black;
	border-color: #bf9b30;
	margin-bottom: 5px;
}
.btn-primary:hover {
	color: black;
	background-color: white;
	border-color: #bf9b30;
}
.navbar-inverse {
	background: #000000;
	border: 0;
}
.navbar-inverse .navbar-nav li a {
	color: #f7f7f7;
	font-size: 16px;
}
.navbar-inverse .navbar-nav li a:hover {
    /* background: #27A967; */
    /* border-style: solid; */
    border-bottom: thick solid #bf9b30;
}
.navbar-inverse .navbar-brand {
    color: #fff;
    /* text-transform: uppercase; */
    font-family: 'Dancing Script', 'Arial', cursive;
    font-size: 25px;
}
.navbar-default {
    background-color: #f8f8f8;
    border-color: #bf9b30;
}
#projects {
    text-align: center;
    background: #000000;
    height: 500px;
    overflow: auto;
    padding-bottom: 50px;
    height:1000
}
#projects p {
	margin-bottom: 30px;
    font-family: sans-serif;
    color: white;
}
#top .h1, #top h1{
    font-size: 55px;
}
    
.fadein-fast {
    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: fadein 2s; /* Firefox < 16 */
     -ms-animation: fadein 2s; /* Internet Explorer */
      -o-animation: fadein 2s; /* Opera < 12.1 */
         animation: fadein 2s;
}
p {
    display: block;
}
/* .card {
    background: white;
} */
h3, alt {
    color: white;
}
.typer-component {
    top: 20px;
    position: absolute;
    bottom: 0;
    clear: left;
    color: black;
    font-family: 'Dancing Script', cursive;
    font-weight: bold;
    font-size: 25px;
}
.social-box {
    list-style-type: none;
    display: flex;
}
.pull-right {
    float: right !important;
}
.pull-left {
    float: left !important;
}
.icon {
    color: #191A19;
    font-size: 2em;
}
#top{
    background-image: url(../img/coffe-mac-copy-op.png);
    padding: 10em 0;
    /* height: 800px; */
    background-size: cover;
}
img{
    max-width: 100%;
    height: auto;
}
.card{
    border: 5px solid white;
}

.card-block{
    margin: 25px 10px;
    
}
.row-m-t{
    margin-top : 100px;
  }

